--- a/app/src/main/res/layout/recycler_orders.xml
+++ b/app/src/main/res/layout/recycler_orders.xml
@@ -1,33 +1,33 @@
 <?xml version="1.0" encoding="utf-8"?>
 <LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
+    xmlns:app="http://schemas.android.com/apk/res-auto"
     android:layout_width="match_parent"
-    android:layout_height="wrap_content"
-    xmlns:app="http://schemas.android.com/apk/res-auto">
+    android:layout_height="wrap_content">
 
     <androidx.cardview.widget.CardView
         android:layout_width="match_parent"
         android:layout_height="wrap_content"
-        app:elevation="25dp"
         app:cardBackgroundColor="@color/white"
         app:cardElevation="5dp"
-        app:cardUseCompatPadding="true">
+        app:cardUseCompatPadding="true"
+        app:elevation="25dp">
 
         <LinearLayout
-            android:layout_width="wrap_content"
-            android:layout_height="wrap_content">
-
+            android:layout_width="match_parent"
+            android:layout_height="wrap_content"
+            android:weightSum="5">
 
             <LinearLayout
-                android:layout_width="184dp"
+                android:layout_width="wrap_content"
                 android:layout_height="wrap_content"
                 android:layout_margin="5sp"
+                android:layout_weight="2"
                 android:orientation="vertical">
 
                 <TextView
                     android:id="@+id/admin_order_date"
-                    android:layout_width="match_parent"
+                    android:layout_width="wrap_content"
                     android:layout_height="match_parent"
-                    android:layout_gravity="center"
                     android:text="2017-02-Dec"
                     android:textColor="@color/overlay_dark_70"
                     android:textSize="15sp" />
@@ -59,8 +59,8 @@
                     android:id="@+id/admin_order_email"
                     android:layout_width="wrap_content"
                     android:layout_height="wrap_content"
-                    android:textColor="@color/overlay_dark_70"
-                    android:text="evanshajeed@gmail.com" />
+                    android:text="evanshajeed@gmail.com"
+                    android:textColor="@color/overlay_dark_70" />
 
             </LinearLayout>
 
@@ -68,12 +68,13 @@
                 android:layout_width="wrap_content"
                 android:layout_height="wrap_content"
                 android:layout_margin="5sp"
+                android:layout_weight="1"
                 android:orientation="vertical">
 
                 <TextView
-                    android:layout_width="match_parent"
+                    android:layout_width="wrap_content"
                     android:layout_height="wrap_content"
-                    android:gravity="center"
+                    android:layout_gravity="center"
                     android:text="Total"
                     android:textColor="@color/overlay_dark_70"
                     android:textSize="17sp" />
@@ -83,18 +84,22 @@
                     android:layout_width="wrap_content"
                     android:layout_height="wrap_content"
                     android:text="Rs: 154.00"
+                    android:layout_gravity="center"
                     android:textColor="@color/overlay_dark_70"
-                    android:textSize="17sp"/>
+                    android:textSize="17sp" />
 
             </LinearLayout>
 
             <TextView
+
                 android:id="@+id/admin_order_status"
                 android:layout_width="wrap_content"
-                android:lines="1"
-                android:layout_height="match_parent"
+                android:layout_gravity="center"
+                android:layout_height="wrap_content"
                 android:layout_margin="3sp"
+                android:layout_weight="1"
                 android:gravity="center"
+                android:lines="1"
                 android:text="processing"
                 android:textColor="@color/grey_700" />
 
