--- a/app/src/main/res/layout/recycler_complain_layout.xml
+++ b/app/src/main/res/layout/recycler_complain_layout.xml
@@ -1,90 +1,88 @@
 <?xml version="1.0" encoding="utf-8"?>
-<androidx.cardview.widget.CardView xmlns:android="http://schemas.android.com/apk/res/android"
+<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
     xmlns:app="http://schemas.android.com/apk/res-auto"
-    android:orientation="vertical"
-    android:layout_width="match_parent"
-    android:layout_height="wrap_content"
-    app:cardElevation="2dp"
-    app:cardUseCompatPadding="true"
-    app:cardCornerRadius="4dp"
-    android:layout_margin="6dp">
+    style="@style/orderlinear">
 
-    <LinearLayout
-        android:layout_width="match_parent"
-        android:layout_height="wrap_content"
-        android:orientation="vertical">
+    <androidx.cardview.widget.CardView
+        style="@style/orderCard"
+        android:orientation="vertical"
+        app:cardCornerRadius="4dp"
+        app:cardElevation="2dp"
+        app:cardUseCompatPadding="true">
 
         <LinearLayout
             android:layout_width="match_parent"
             android:layout_height="wrap_content"
-            android:orientation="horizontal"
-            android:paddingStart="8dp"
-            android:paddingLeft="8dp"
-            android:paddingRight="8dp"
-            android:paddingBottom="2dp">
+            android:orientation="vertical">
 
-            <TextView
-                android:layout_width="wrap_content"
-                android:layout_height="wrap_content"
-                android:ellipsize="end"
-                android:text="DATE: "
-                android:textStyle="bold"
-                android:textSize="16sp"
-                android:textColor="@color/black"
-                android:padding="8dp" />
+            <LinearLayout style="@style/orderlinear">
 
-            <TextView
-                android:id="@+id/complain_time"
-                android:layout_width="wrap_content"
-                android:layout_height="wrap_content"
-                android:ellipsize="end"
-                android:text="17/02/2020"
-                android:textSize="16sp"
-                android:textColor="@color/black"
-                android:padding="8dp" />
+                <TextView
+                    style="@style/orderlayout"
+                    android:text="@string/date"
+                    android:textColor="@color/black"
+                    android:textStyle="bold" />
+
+                <TextView
+                    android:id="@+id/complain_time"
+                    style="@style/orderlayout"
+                    android:text="17/02/2020"
+                    android:textColor="@color/black" />
+
+            </LinearLayout>
+
+            <LinearLayout style="@style/orderlinear">
+
+                <TextView
+                    style="@style/orderlayout"
+                    android:text="@string/mart_name"
+                    android:textColor="@color/black"
+                    android:textStyle="bold" />
+
+                <TextView
+                    android:id="@+id/complaints_mart_name"
+                    style="@style/orderlayout"
+                    android:text="abc"
+                    android:textColor="@color/black" />
+
+            </LinearLayout>
+
+            <LinearLayout style="@style/orderlinear">
+
+                <TextView
+                    style="@style/orderlayout"
+                    android:text="@string/customer_name"
+                    android:textColor="@color/black"
+                    android:textStyle="bold" />
+
+                <TextView
+                    android:id="@+id/complaints_customer_name"
+                    style="@style/orderlayout"
+                    android:text="abc"
+                    android:textColor="@color/black" />
+
+            </LinearLayout>
+
+            <LinearLayout style="@style/orderlinear">
+
+                <TextView
+                    style="@style/orderlayout"
+                    android:text="@string/complaints"
+                    android:textColor="@color/black"
+                    android:textStyle="bold" />
+
+                <TextView
+                    android:id="@+id/complain_detail"
+                    style="@style/orderlayout"
+                    android:text="Complaints"
+                    android:textColor="@color/black" />
+
+            </LinearLayout>
 
         </LinearLayout>
 
-        <View
-            android:layout_width="match_parent"
-            android:layout_height="1dp"
-            android:background="@color/grey_500"
-            android:layout_marginLeft="12dp"
-            android:layout_marginRight="12dp"/>
+    </androidx.cardview.widget.CardView>
 
-        <LinearLayout
-            android:layout_width="match_parent"
-            android:layout_height="wrap_content"
-            android:orientation="horizontal"
-            android:paddingStart="8dp"
-            android:paddingLeft="8dp"
-            android:paddingRight="8dp"
-            android:paddingBottom="2dp">
+    <View style="@style/orderview" />
 
-            <TextView
-                android:layout_width="wrap_content"
-                android:layout_height="wrap_content"
-                android:text="Complaint: "
-                android:padding="8dp"
-                android:textStyle="bold"
-                android:textSize="16sp"
-                android:textColor="@color/black"
-                android:layout_gravity="center_vertical" />
-
-            <TextView
-                android:id="@+id/complain_detail"
-                android:layout_width="wrap_content"
-                android:layout_height="wrap_content"
-                android:text="Complaint"
-                android:padding="8dp"
-                android:textSize="16sp"
-                android:textColor="@color/black"
-                android:layout_gravity="center_vertical" />
-
-        </LinearLayout>
-
-
-
-    </LinearLayout>
-
-</androidx.cardview.widget.CardView>
+</LinearLayout>
