reviews and complaints xml solved 😉

--- a/app/src/main/res/layout/recycler_complain_layout.xml
+++ b/app/src/main/res/layout/recycler_complain_layout.xml
@@ -63,7 +63,8 @@
 
             </LinearLayout>
 
-            <LinearLayout style="@style/orderlinear">
+            <LinearLayout style="@style/orderlinear"
+                android:orientation="vertical">
 
                 <TextView
                     style="@style/orderlayout"
