Mart profile Updated Editable Test Fields Customer profile Updated Editable Test Fields

--- a/app/src/main/res/layout/fragment_mart_profile.xml
+++ b/app/src/main/res/layout/fragment_mart_profile.xml
@@ -61,6 +61,7 @@
                         android:layout_height="wrap_content"
                         android:layout_marginRight="10dp"
                         android:focusable="false"
+                        android:clickable="false"
                         android:textStyle="bold"
                         android:text="Huzaifa" />
                 </LinearLayout>
