--- a/app/src/main/res/layout/fragment_customer_profile.xml
+++ b/app/src/main/res/layout/fragment_customer_profile.xml
@@ -51,13 +51,18 @@
                     <TextView
                         android:layout_width="wrap_content"
                         android:layout_height="wrap_content"
+                        android:layout_marginLeft="10dp"
+                        android:layout_marginRight="40dp"
                         android:text="Name :" />
 
-                    <TextView
+                    <EditText
                         android:id="@+id/tvname"
                         android:layout_width="wrap_content"
                         android:layout_height="wrap_content"
-                        android:layout_marginLeft="10dp"
+                        android:layout_marginRight="10dp"
+                        android:focusable="false"
+                        android:clickable="false"
+                        android:textStyle="bold"
                         android:text="Huzaifa" />
                 </LinearLayout>
 
@@ -75,13 +80,17 @@
                     <TextView
                         android:layout_width="wrap_content"
                         android:layout_height="wrap_content"
+                        android:layout_marginLeft="10dp"
+                        android:textStyle="bold"
+                        android:layout_marginRight="40dp"
                         android:text="Email :" />
 
-                    <TextView
+                    <EditText
                         android:id="@+id/tvemail"
                         android:layout_width="wrap_content"
                         android:layout_height="wrap_content"
-                        android:layout_marginLeft="10dp"
+                        android:focusable="false"
+                        android:textStyle="bold"
                         android:text="huzaifa@gmail.com" />
                 </LinearLayout>
 
@@ -99,13 +108,17 @@
                     <TextView
                         android:layout_width="wrap_content"
                         android:layout_height="wrap_content"
+                        android:layout_marginLeft="10dp"
+                        android:textStyle="bold"
+                        android:layout_marginRight="35dp"
                         android:text="Mobile :" />
 
-                    <TextView
+                    <EditText
                         android:id="@+id/tvmobile"
                         android:layout_width="wrap_content"
                         android:layout_height="wrap_content"
-                        android:layout_marginLeft="10dp"
+                        android:textStyle="bold"
+                        android:focusable="false"
                         android:text="03001234567" />
                 </LinearLayout>
 
@@ -114,7 +127,7 @@
                     android:layout_height="1dp"
                     android:background="@color/cardBorderColor" />
 
-               <LinearLayout
+                <LinearLayout
                     android:layout_width="match_parent"
                     android:layout_height="wrap_content"
                     android:layout_margin="10dp"
@@ -123,24 +136,66 @@
                     <TextView
                         android:layout_width="wrap_content"
                         android:layout_height="wrap_content"
+                        android:layout_marginLeft="10dp"
+                        android:layout_marginRight="25dp"
+                        android:textStyle="bold"
                         android:text="Address :" />
 
-                    <TextView
+                    <EditText
                         android:id="@+id/tvaddress"
                         android:layout_width="wrap_content"
                         android:layout_height="wrap_content"
-                        android:layout_marginLeft="10dp"
+                        android:textStyle="bold"
+                        android:focusable="false"
                         android:text="Karachi" />
-               </LinearLayout>
+                </LinearLayout>
 
                 <View
                     android:layout_width="match_parent"
                     android:layout_height="1dp"
                     android:background="@color/cardBorderColor" />
 
+
+                <LinearLayout
+                    android:layout_width="match_parent"
+                    android:layout_height="wrap_content"
+                    android:weightSum="2"
+                    android:layout_marginTop="10dp"
+                    android:layout_marginStart="30dp"
+                    android:orientation="horizontal"
+                    android:layout_marginEnd="30dp">
+                    <Button
+                        android:id="@+id/btnedit"
+                        android:layout_width="wrap_content"
+                        android:layout_height="wrap_content"
+                        android:layout_weight="1"
+                        android:textStyle="bold"
+                        android:textColor="#fff"
+                        android:text="Edit"
+                        android:layout_marginEnd="10dp"
+                        android:background="@drawable/shop_button_bg"/>
+
+
+                    <Button
+                        android:id="@+id/btnsubmt"
+                        android:layout_width="wrap_content"
+                        android:layout_height="wrap_content"
+                        android:layout_weight="1"
+                        android:text="Update"
+                        android:textStyle="bold"
+                        android:textColor="#fff"
+                        android:background="@drawable/shop_button_bg"/>
+
+
+
+
+
+
+                </LinearLayout>
             </LinearLayout>
         </RelativeLayout>
     </ScrollView>
+
 
 
 </RelativeLayout>
