--- a/app/src/main/res/menu/menu_customer_navigation.xml
+++ b/app/src/main/res/menu/menu_customer_navigation.xml
@@ -19,7 +19,21 @@
         android:id="@+id/action_orderz"
         android:checked="false"
         android:icon="@drawable/ic_reorder_black_24dp"
-        android:title="Profile"
+        android:title="Orders"
+        app:showAsAction="ifRoom" />
+
+    <item
+        android:id="@+id/action_complaints"
+        android:checked="false"
+        android:icon="@drawable/ic_star_half_black_24dp"
+        android:title="Complaints"
+        app:showAsAction="ifRoom" />
+
+    <item
+        android:id="@+id/action_reviews"
+        android:checked="false"
+        android:icon="@drawable/ic_rate_review_black_24dp"
+        android:title="Reviews"
         app:showAsAction="ifRoom" />
 
     <item
