Admin module completed

--- a/app/src/main/res/menu/menu_customer_navigation.xml
+++ b/app/src/main/res/menu/menu_customer_navigation.xml
@@ -16,7 +16,7 @@
         app:showAsAction="ifRoom" />
 
     <item
-        android:id="@+id/action_orderz"
+        android:id="@+id/action_orders"
         android:checked="false"
         android:icon="@drawable/ic_reorder_black_24dp"
         android:title="Orders"
