--- a/app/src/main/res/layout/activity_admin_complain_fragment.xml
+++ b/app/src/main/res/layout/activity_admin_complain_fragment.xml
@@ -3,6 +3,7 @@
     xmlns:app="http://schemas.android.com/apk/res-auto"
     android:layout_width="match_parent"
     android:layout_height="match_parent"
+    xmlns:tools="http://schemas.android.com/tools"
     android:orientation="vertical"
     android:background="@android:color/white">
 
@@ -14,8 +15,17 @@
         app:elevation="6dp"
         android:minHeight="?attr/actionBarSize"
         android:theme="@style/ThemeOverlay.AppCompat.Dark.ActionBar"
-        app:popupTheme="@style/ThemeOverlay.AppCompat.Light" />
-
+        app:popupTheme="@style/ThemeOverlay.AppCompat.Light">
+            <ImageView
+                android:layout_width="30dp"
+                android:layout_height="40dp"
+                android:id="@+id/logout"
+                android:layout_gravity="right"
+                android:layout_marginRight="5dp"
+                android:src="@drawable/ic_power_settings_new_black_24dp"
+                android:textAlignment="center"
+                tools:ignore="RtlCompat" />
+    </androidx.appcompat.widget.Toolbar>
 
     <TextView
         android:layout_width="match_parent"
