--- a/app/src/main/res/menu/logout_main.xml
+++ b/app/src/main/res/menu/logout_main.xml
@@ -7,6 +7,6 @@
         android:orderInCategory="100"
         android:title="Logout"
         android:icon="@drawable/ic_power_settings_new_black_24dp"
-        app:showAsAction="always" />
+        app:showAsAction="ifRoom" />
 
 </menu>
