--- a/app/src/main/res/menu/menu_mart_navigation.xml
+++ b/app/src/main/res/menu/menu_mart_navigation.xml
@@ -4,8 +4,8 @@
     <item
         android:id="@+id/action_receive"
         android:checked="true"
-        android:icon="@drawable/ic_home_black_24dp"
-        android:title="Mart Home"
+        android:icon="@drawable/ic_reorder_black_24dp"
+        android:title="Orders"
         app:showAsAction="ifRoom" />
 
     <item
@@ -18,14 +18,14 @@
     <item
         android:id="@+id/action_complaints"
         android:checked="false"
-        android:icon="@drawable/ic_star_half_black_24dp"
+        android:icon="@drawable/ic_rate_review_black_24dp"
         android:title="Complaints"
         app:showAsAction="ifRoom" />
 
     <item
         android:id="@+id/action_reviews"
         android:checked="false"
-        android:icon="@drawable/ic_rate_review_black_24dp"
+        android:icon="@drawable/ic_star_half_black_24dp"
         android:title="Reviews"
         app:showAsAction="ifRoom" />
 
