--- a/app/src/main/res/layout/fragment_mart_product.xml
+++ b/app/src/main/res/layout/fragment_mart_product.xml
@@ -65,7 +65,31 @@
             </com.google.android.material.textfield.TextInputLayout>
 
             <com.google.android.material.textfield.TextInputLayout
-                android:id="@+id/tilEmail"
+                android:id="@+id/tilDescription"
+                android:layout_width="match_parent"
+                android:layout_height="wrap_content"
+                android:layout_marginStart="@dimen/margin_layout"
+                android:layout_marginEnd="@dimen/margin_layout"
+                android:layout_marginTop="5sp"
+                app:errorEnabled="true"
+                app:layout_constraintEnd_toEndOf="parent"
+                app:layout_constraintStart_toStartOf="parent">
+
+                <com.google.android.material.textfield.TextInputEditText
+                    android:id="@+id/description"
+                    android:layout_width="match_parent"
+                    android:layout_height="wrap_content"
+                    android:backgroundTint="@color/colorPrimaryText"
+                    android:hint="Product Description"
+                    android:inputType="textPersonName"
+                    android:textColor="@color/colorPrimaryText"
+                    android:textColorHint="@color/colorPrimaryText"
+                    android:textSize="@dimen/text_body_size" />
+
+            </com.google.android.material.textfield.TextInputLayout>
+
+            <com.google.android.material.textfield.TextInputLayout
+                android:id="@+id/tilprice"
                 android:layout_width="match_parent"
                 android:layout_height="wrap_content"
                 android:layout_marginStart="@dimen/margin_layout"
@@ -80,7 +104,7 @@
                     android:layout_height="wrap_content"
                     android:backgroundTint="@color/colorPrimaryText"
                     android:hint="Product Price"
-                    android:inputType="textEmailAddress"
+                    android:inputType="phone"
                     android:textColor="@color/colorPrimaryText"
                     android:textColorHint="@color/colorPrimaryText"
                     android:textSize="@dimen/text_body_size" />
@@ -88,7 +112,7 @@
             </com.google.android.material.textfield.TextInputLayout>
 
             <com.google.android.material.textfield.TextInputLayout
-                android:id="@+id/tilPassword"
+                android:id="@+id/tilquan"
                 android:layout_width="match_parent"
                 android:layout_height="wrap_content"
                 android:layout_marginStart="@dimen/margin_layout"
@@ -103,7 +127,7 @@
                     android:layout_height="wrap_content"
                     android:backgroundTint="@color/colorPrimaryText"
                     android:hint="Product Quantity"
-                    android:inputType="textPassword"
+                    android:inputType="phone"
                     android:textColor="@color/colorPrimaryText"
                     android:textColorHint="@color/colorPrimaryText"
                     android:textSize="@dimen/text_body_size" />
@@ -111,7 +135,7 @@
             </com.google.android.material.textfield.TextInputLayout>
 
             <com.google.android.material.textfield.TextInputLayout
-                android:id="@+id/tilRetypePassword"
+                android:id="@+id/tilBrand"
                 android:layout_width="match_parent"
                 android:layout_height="wrap_content"
                 android:layout_marginStart="@dimen/margin_layout"
@@ -121,12 +145,12 @@
                 app:layout_constraintStart_toStartOf="parent">
 
                 <com.google.android.material.textfield.TextInputEditText
-                    android:id="@+id/product_code"
+                    android:id="@+id/brand"
                     android:layout_width="match_parent"
                     android:layout_height="wrap_content"
                     android:backgroundTint="@color/colorPrimaryText"
-                    android:hint="Product Code"
-                    android:inputType="textPassword"
+                    android:hint="Product Brand"
+                    android:inputType="text"
                     android:textColor="@color/colorPrimaryText"
                     android:textColorHint="@color/colorPrimaryText"
                     android:textSize="@dimen/text_body_size" />
@@ -136,7 +160,7 @@
             </com.google.android.material.textfield.TextInputLayout>
 
             <com.google.android.material.textfield.TextInputLayout
-                android:id="@+id/tilRetdypePassword"
+                android:id="@+id/tiimage_url"
                 android:layout_width="match_parent"
                 android:layout_height="wrap_content"
                 android:layout_marginStart="@dimen/margin_layout"
@@ -151,7 +175,7 @@
                     android:layout_height="wrap_content"
                     android:backgroundTint="@color/colorPrimaryText"
                     android:hint="Product Image Url"
-                    android:inputType="textPassword"
+                    android:inputType="textMultiLine"
                     android:textColor="@color/colorPrimaryText"
                     android:textColorHint="@color/colorPrimaryText"
                     android:textSize="@dimen/text_body_size" />
